--- a/mandelbulber2/qt/dock_animation.ui
+++ b/mandelbulber2/qt/dock_animation.ui
@@ -1505,7 +1505,54 @@ keyframes</string>
           </layout>
          </item>
          <item>
-          <widget class="cAnimationValueChartWidget" name="widgetValueChart" native="true"/>
+          <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1">
+           <property name="spacing">
+            <number>2</number>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <layout class="QGridLayout" name="gridLayout_2">
+             <property name="spacing">
+              <number>2</number>
+             </property>
+             <item row="0" column="0">
+              <widget class="QToolButton" name="toolButton_chartZoomIn">
+               <property name="text">
+                <string>+</string>
+               </property>
+               <property name="icon">
+                <iconset theme="zoom-in"/>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QToolButton" name="toolButton_chartZoomOut">
+               <property name="text">
+                <string>‒</string>
+               </property>
+               <property name="icon">
+                <iconset theme="zoom-out"/>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <widget class="cAnimationValueChartWidget" name="widgetValueChart" native="true">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>64</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
          <item>
           <widget class="MyTableWidgetKeyframes" name="tableWidget_keyframe_animation">
