asrf m3d iter controls for invCyl

--- a/mandelbulber2/formula/ui/menger_cross_mod1.ui
+++ b/mandelbulber2/formula/ui/menger_cross_mod1.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledx">
      <property name="title">
-      <string>Prism Shape</string>
+      <string>Prism Shape&amp;</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
